--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
+# Mobile Tools for Java (J2ME)å
 .mtj.tmp/
 
 # Package Files #
@@ -10,3 +10,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.c9/*
